Fix css bug where primary navigation active causes header to break on desktop

--- a/src/assets/styles/components/_primary-navigation.scss
+++ b/src/assets/styles/components/_primary-navigation.scss
@@ -131,7 +131,13 @@
     z-index: 9;
 
     @include media('>big-phone') {
-      z-index: 10;
+      animation: none;
+      background-color: transparent;
+      z-index: -1;
+
+      .header-active & {
+        z-index: 10;
+      }
     }
   }
 }
